<resources>
    <string name="app_name">Inspectr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="uc_lbl_username">username</string>
    <string name="uc_lbl_password">password</string>
    <string name="uc_lbl_oc_url">Owncloud URL</string>
    <string name="uc_cmd_cancel">cancel</string>
    <string name="uc_cmd_ok">ok</string>
</resources>
