<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.xtremelabs.inspectr.authentication.AuthenticationActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:id="@+id/uc_lbl_username"
        android:text="@string/uc_lbl_username"></TextView>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/uc_txt_username" android:inputType="textEmailAddress"></EditText>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:id="@+id/uc_lbl_password"
        android:text="@string/uc_lbl_password"></TextView>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/uc_txt_password" android:inputType="textPassword"></EditText>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:id="@+id/uc_lbl_oc_url"
        android:text="@string/uc_lbl_oc_url"></TextView>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/uc_txt_oc_url"></EditText>
    <LinearLayout android:layout_width="wrap_content"
        android:id="@+id/relativeLayout1"
        android:layout_height="fill_parent"
        android:gravity="bottom">
        <Button android:layout_alignParentLeft="true"
            android:onClick="onCancelClick"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:id="@+id/uc_cmd_cancel" android:text="@string/uc_cmd_cancel"></Button>
        <Button android:layout_alignParentRight="true"
            android:onClick="onSaveClick"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:id="@+id/uc_cmd_ok" android:text="@string/uc_cmd_ok"></Button>
    </LinearLayout>
</LinearLayout>
